--- a/src/STW.StubApi.Presentation/STW.StubApi.Presentation.csproj
+++ b/src/STW.StubApi.Presentation/STW.StubApi.Presentation.csproj
@@ -5,8 +5,8 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="JsonSchema.Net" Version="7.0.1" />
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.4"/>
-        <PackageReference Include="NJsonSchema" Version="11.0.0" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0"/>
     </ItemGroup>
 
