--- a/src/STW.StubApi.Presentation/STW.StubApi.Presentation.csproj
+++ b/src/STW.StubApi.Presentation/STW.StubApi.Presentation.csproj
@@ -7,6 +7,8 @@
     <ItemGroup>
         <PackageReference Include="JsonSchema.Net" Version="7.0.1" />
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.4"/>
+        <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.4" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="8.0.4" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0"/>
     </ItemGroup>
 
